--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
     <string name="app_name">HelloWorld</string>
 
-    <string name="tv_random_number"></string>
+    <string name="tv_random_number">Random number</string>
     <string name="hint_min_et">From</string>
     <string name="hint_max_et">To</string>
     <string name="generate_random_button">Generate</string>
 
     <string name="switch_title">Setting option</string>
     <string name="swtich_summary">Turn this on or off</string>
+
+    <string name="git_hub">GitHub</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
